--- a/package.json
+++ b/package.json
@@ -34,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://dionysus11.github.io/movie_app_2020"
+  "homepage": "https://dionysus11-source.github.io/movie_app_2020"
 }
